# grin

./: .gitattributes  .gitignore  .travis.yml  AbstractInterpretation.md  BACKERS.md  Design.md  Documentation.md  GRIN-LLVM-CodeGen.md  GRIN-Type-System.md  GRIN-type-system.md  LICENSE  MVP.md  MemoryManagement.md  Milestone-1.md  Milestone-2.md  README.md  Readings.md  TODO.md  bench.sh  created-by.todo  dead-code-elimination.todo  deadness.todo  default.nix  examples.note  flake.nix  grin.cabal  hello.idr  live-variable.todo  node_visualization  primops.grin  shell.nix  stack.yaml  sum.lam  todo.just-to-practice
grin/: LICENSE  cabal.project  default.nix  do.grin  grin-benchmark.html  grin.cabal  prim_ops.c  prim_ops.h  sum_opt.grin  sum_simple.grin  test_prim_ops.c
grin/app/: GHCCoreGrin.hs  GHCGrin.hs  GrinCLI.hs  LambdaGrin.hs  Main.hs
grin/app/CLI/: Lib.hs  Main.hs
grin/datalog/hpt/: hpt.dl
grin/experiments/: FreshNames.hs
grin/grin/: confluence_test.grin  do.grin  improvement1.grin  mem-leak-test.grin  minimal.grin  minimal2.grin  right.grin  sum_opt.grin  sum_opt_desugared.grin  sum_opt_lint_errors.grin  sum_simple.grin  sum_simple_inlined_eval.grin
grin/grin/created-by-test/: case_restricted_1.grin  case_restricted_2.grin  case_simple.grin  function_call.grin  heap.grin
grin/grin/deadness/: heap.grin
grin/grin/effects/: app.grin  case.grin  case_fun.grin  case_in_case.grin  fun.grin  funs.grin  multiple.grin  simple.grin
grin/grin/extended-syntax/: sum_simple.grin
grin/grin/live-variable/: case_backward_propagation.grin  case_backward_propagation_nodes.grin  case_fun_side_effect.grin  case_nodes_side_effect.grin  case_side_effect.grin  fields.grin  fun_nodes_side_effect.grin  fun_side_effect.grin  function_call_2.grin  graph_reduction.grin  graph_reduction_real_1.grin  graph_reduction_real_2.grin  graph_reduction_real_3.grin  graph_reduction_real_4.grin  graph_reduction_real_5.grin  heap_case.grin  heap_case_min.grin  heap_simple.grin  lit_pat.grin  main_node_ret_2.grin  nodes.grin  sum_opt.grin  tricky_nodes.grin
grin/grin/opt-stages/: stage-00.grin  stage-01.grin  stage-04.grin  stage-05.grin  stage-06.grin  stage-07.grin  stage-08.grin  stage-09.grin  stage-10.grin  stage-11.grin  stage-12.grin
grin/grin/opt-stages-high-level/: 002.simple.ll  002.simple.s  011.opt.grin  011.opt.ll  11.opt.grin  11.opt.ll  11.opt.s  2.simple.ll  2.simple.s  c  notes  pp-min-full.sh  pp-min.sh  stage-00.grin  stage-02.grin  stage-03.grin  stage-05.grin  stage-06.grin  stage-07.grin  stage-08.grin  test.c
grin/grin/sum-simple-output/: 001.T-SparseCaseOptimisation  002.T-CopyPropagation  003.T-CaseCopyPropagation  004.T-ArityRaising  005.T-InlineEval  006.T-BindNormalisation  007.T-SparseCaseOptimisation  008.T-CopyPropagation  009.T-DeadVariableElimination  010.T-CommonSubExpressionElimination  011.T-GeneralizedUnboxing  012.T-ArityRaising  013.T-LateInlining  014.T-BindNormalisation  015.T-EvaluatedCaseElimination  016.T-TrivialCaseElimination  017.T-CopyPropagation  018.T-DeadVariableElimination  019.T-ArityRaising  020.T-CopyPropagation  021.T-DeadVariableElimination  022.T-CaseHoisting  023.T-ArityRaising  024.T-CopyPropagation  025.T-DeadVariableElimination  026.T-CommonSubExpressionElimination  027.T-ArityRaising  028.T-CopyPropagation  029.T-DeadVariableElimination  030.T-ArityRaising  031.T-CopyPropagation  032.T-DeadVariableElimination  033.high-level-opt-code.ll  033.high-level-opt-code.s
grin/grin/undefined/: simple.grin
grin/grin/wasm-sum-test/: README.md  debug-mem.grin  grin-wasm-opt.html  grin-wasm-simple.html  opt-linked.wasm  opt-linked.wat  opt.wasm  opt.wat  rts-functions  simple-linked.wasm  simple-linked.wat  simple.wasm  simple.wat  sum_simple.grin  wasm-info  wasm.sh
grin/src/: AbstractRunGrin.hs  Assertions.hs  CESKMachine.hs  Check.hs  CodeGen.hs  CodeGenLLVM.hs  CodeGenX64.hs  Eval.hs  Free.hs  Grammar.hs  Grin.hs  GrinTH.hs  Gspec.hs  JITLLVM.hs  Lint.hs  NOTES  Optimizations.hs  ParseGrin.hs  Pipeline.hs  Pretty.hs  PrettyHPT.hs  PrettyLint.hs  PrimOps.hs  ReduceGrin.hs  STReduceGrin.hs  Statistics.hs  TODO  Test.hs  Transformations.hs  TypeCheck.hs  TypeEnv.hs  VarGen.hs  node_support.todo  todo.micro
grin/src/AbstractInterpretation/: AbstractRunGrin.hs  BinaryIR.hs  BinaryResult.hs  CByResult.hs  CByResultTypes.hs  CByUtil.hs  CodeGen.hs  CodeGenMain.hs  CreatedBy.hs  HPTResult.hs  HPTResultNew.hs  HeapPointsTo.hs  IR.hs  LVAResult.hs  LVAResultTypes.hs  LVAUtil.hs  LiveVariable.hs  Model.hs  OptimiseAbstractProgram.hs  OptimiseHPT.hs  Pretty.hs  PrettyCBy.hs  PrettyHPT.hs  PrettyIR.hs  PrettyLVA.hs  PrettySharing.hs  Reduce.hs  ReduceCpp.hs  Sharing.hs  SharingResult.hs  Util.hs
grin/src/Frontend/: CodeGen.hs  FromSTG.hs  Lambda.hs  ParseLambda.hs  PrettyLambda.hs  PrimOps.hs
grin/src/Grin/: EffectMap.hs  ExtendedSyntax.hs  Grin.hs  GrinTH.hs  Lint.hs  Nametable.hs  Parse.hs  ParseAST.hs  ParseBasic.hs  ParseGrin.hs  ParseType.hs  ParseTypeEnv.hs  Pretty.hs  PrettyLint.hs  PrimOpsPrelude.hs  Research.hs  Statistics.hs  TH.hs  (+5 more)
grin/test/: Assertions.hs  Benchmark.hs  EndToEnd.hs  HptSpec.hs  LintSpec.hs  LiveVariableSpec.hs  NametableSpec.hs  ParserSpec.hs  PipelineSpec.hs  PrettySpec.hs  PrimOpsSpec.hs  TestSpec.hs
grin/test-data/: .gitignore  length_before.grin  pnode_before.grin
grin/test-runtime/: runtime.c
libs/ghc-dump-core/: GhcDump_Ast.hs  GhcDump_Convert.hs  ghc-dump-core.cabal
libs/ghc-dump-util/: ghc-dump-util.cabal
repo-idris/: IdrisGrin.hs  idris-grin.cabal
repo-idris/Idris/: CodegenGrin.hs
repo-idris/test/: Hello.idr
repo-lambda/: GHCGrin.hs  lambda-grin.cabal
repo-lambda/Lambda/: FromCore.hs  FromDumpCore.hs  FromSTG.hs  Lint.hs  Parse.hs  Pretty.hs
repo-lambda/haskell-test/: sum.hs  tsumupto2.hs
repo-lambda/libs/: info
repo-lambda/test/: 001.from-lambda.grin  002.sum-tweaked.grin  002.sum.grin  bug01-letS.lam  c  c-opt  hof.lam  lambda-cg-bug01.grin  sum3.lam
x64/: CHANGELOG.md  LICENSE  README.md  TODO.md  Test.hs  x86-64bit.cabal
x64/CodeGen/: X86.hs
x64/Control/: DeeperSeq.hs
(+897 files in other folders)
