name:                grin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/grin#readme
license:             BSD3
license-file:        LICENSE
author:              Andor Penzes, Csaba Hruska
maintainer:          andor.penzes@gmail.com
copyright:           2017 Andor Penzes, Csaba Hruska
category:            Compiler
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    AbstractInterpretation.CodeGen
    AbstractInterpretation.CodeGenMain
    AbstractInterpretation.HPTResult
    AbstractInterpretation.IR
    AbstractInterpretation.PrettyHPT
    AbstractInterpretation.PrettyIR
    AbstractInterpretation.Reduce
    AbstractInterpretation.Sharing
    AbstractInterpretation.Model
    AbstractInterpretation.OptimiseHPT
    Grin.Grin
    Grin.Syntax
    Grin.TH
    Grin.Lint
    Grin.Parse
    Grin.Pretty
    Grin.PrettyLint
    Grin.Statistics
    Grin.TypeCheck
    Grin.TypeEnv
    Pipeline.Eval
    Pipeline.Optimizations
    Pipeline.Pipeline
    Reducer.Base
    Reducer.IO
    Reducer.LLVM.Base
    Reducer.LLVM.CodeGen
    Reducer.LLVM.InferType
    Reducer.LLVM.JIT
    Reducer.LLVM.PrimOps
    Reducer.LLVM.TypeGen
    Reducer.PrimOps
    Reducer.Pure
    Test.Assertions
    Test.Check
    Test.Grammar
    Test.PrimOps
    Test.Test
    Transformations.BindNormalisation
    Transformations.CountVariableUse
    Transformations.EffectMap
    Transformations.GenerateEval
    Transformations.MangleNames
    Transformations.Names
    Transformations.StaticSingleAssignment
    Transformations.UnitPropagation
    Transformations.Util
    Transformations.Optimising.ArityRaising
    Transformations.Optimising.ArityRaisingSimple
    Transformations.Optimising.CaseCopyPropagation
    Transformations.Optimising.CaseHoisting
    Transformations.Optimising.ConstantFolding
    Transformations.Optimising.ConstantPropagation
    Transformations.Optimising.CopyPropagation
    Transformations.Optimising.CSE
    Transformations.Optimising.DeadParameterElimination
    Transformations.Optimising.DeadProcedureElimination
    Transformations.Optimising.DeadVariableElimination
    Transformations.Optimising.EvaluatedCaseElimination
    Transformations.Optimising.GeneralizedUnboxing
    Transformations.Optimising.Inlining
    Transformations.Optimising.SparseCaseOptimisation
    Transformations.Optimising.TrivialCaseElimination
    Transformations.Optimising.UpdateElimination
    Transformations.Optimising.NonSharedElimination
    Transformations.Simplifying.CaseSimplification
    Transformations.Simplifying.RegisterIntroduction
    Transformations.Simplifying.RightHoistFetch2
    Transformations.Simplifying.SplitFetch
    Transformations.Simplifying.Vectorisation
    Transformations.Simplifying.Vectorisation2

  build-depends:
    base,
    containers,
    bimap,
    mtl,
    comonad,
    megaparsec,
    pretty-show,
    vector,
    deepseq,
    recursion-schemes,
    ansi-wl-pprint,
    monad-gen,
    free,
    bytestring,
    llvm-hs,
    llvm-hs-pure,
    filepath,
    transformers,
    microlens,
    microlens-mtl,
    microlens-th,
    microlens-platform,
    process,
    text,
    text-short,
    time,
    llvm-hs-pretty,
    optparse-applicative,
    directory,
    pretty-simple,
    functor-infix,
    generic-random,
    hspec,
    extra,
    logict,
    QuickCheck,
    neat-interpolation,
    template-haskell,
    Diff,
    random

  default-language:    Haskell2010

executable grin
  hs-source-dirs:      app
  main-is:             GrinCLI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , grin
                     , recursion-schemes
                     , ansi-wl-pprint
                     , megaparsec
                     , containers
                     , process
                     , pretty-show
                     , llvm-hs-pretty
                     , text
                     , filepath
                     , transformers
                     , microlens
                     , microlens-th
                     , microlens-mtl
                     , microlens-platform
                     , optparse-applicative
                     , directory
  default-language:    Haskell2010

test-suite grin-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , functor-infix
                     , grin
                     , hspec
                     , hspec-discover
                     , QuickCheck
                     , deepseq
                     , vector
                     , text
                     , random
  other-modules:       Transformations.Simplifying.RegisterIntroductionSpec
                     , Transformations.Simplifying.CaseSimplificationSpec
                     , Transformations.Simplifying.SplitFetchSpec
                     , Transformations.Simplifying.RightHoistFetchSpec
                     , Transformations.Simplifying.VectorisationSpec
                     , Transformations.Optimising.CaseCopyPropagationSpec
                     , Transformations.Optimising.CopyPropagationSpec
                     , Transformations.Optimising.ConstantFoldingSpec
                     , Transformations.Optimising.ConstantPropagationSpec
                     , Transformations.Optimising.EvaluatedCaseEliminationSpec
                     , Transformations.Optimising.TrivialCaseEliminationSpec
                     , Transformations.Optimising.SparseCaseOptimisationSpec
                     , Transformations.Optimising.UpdateEliminationSpec
                     , Transformations.Optimising.CSESpec
                     , Transformations.Optimising.GeneralizedUnboxingSpec
                     , Transformations.Optimising.ArityRaisingSpec
                     , Transformations.Optimising.DeadProcedureEliminationSpec
                     , Transformations.Optimising.DeadParameterEliminationSpec
                     , Transformations.Optimising.DeadVariableEliminationSpec
                     , Transformations.Optimising.InliningSpec
                     , Transformations.Optimising.CaseHoistingSpec
                     , Transformations.StaticSingleAssignmentSpec
                     , Transformations.BindNormalisationSpec
                     , Transformations.ConfluenceSpec
                     , Samples.SumListSpec
                     , Samples.ArityFullRemoveSpec
                     , HptSpec
                     , LintSpec
                     , TestSpec
                     , PipelineSpec
                     , ParserSpec
                     , AbstractInterpretation.IRSpec
                     , AbstractInterpretation.OptimiseHPTSpec
                     , AbstractInterpretation.SharingSpec
  default-language:    Haskell2010

benchmark grin-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Benchmark.hs
  build-depends:       base
                     , grin
                     , criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/grin-tech/grin
